--- a/part2/index.html
+++ b/part2/index.html
@@ -9,10 +9,14 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-resource.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
+    <script src="js/app.js"></script>
+
+    <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
+
     <title>{{title}}</title>
 </head>
-<script src="js/app.js"></script>
-<script src="js/controllers.js"></script>
+
 <body>
 <section data-ng-controller="IndexController">
     <!-- use double braces to refer to a property defined in IndexController -->
@@ -22,7 +26,7 @@
         <div data-ng-controller="PaperSearch" data-ng-include="'js/partials/search.html'"></div>
     </div>
     <div class="schedule">
-        <div data-ng-controller="schedule" data-ng-include="'js/partials/schedule.html'"></div>
+        <div data-ng-controller="ScheduleController" data-ng-include="'js/partials/schedule.html'"></div>
     </div>
 </section>
 </body>
