--- a/part2/index.html
+++ b/part2/index.html
@@ -10,9 +10,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
     <script src="js/app.js"></script>
-
-    <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
 
     <title>{{title}}</title>
 </head>
@@ -25,8 +24,8 @@
     <div class="paperSearch">
         <div data-ng-controller="PaperSearch" data-ng-include="'js/partials/search.html'"></div>
     </div>
-    <div class="schedule">
-        <div data-ng-controller="ScheduleController" data-ng-include="'js/partials/schedule.html'"></div>
+    <div class="Schedule">
+        <div data-ng-controller="Schedule" data-ng-include="'js/partials/schedule.html'"></div>
     </div>
 </section>
 </body>
