--- a/part2/index.html
+++ b/part2/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
 
-<!-- Link to library to use in Application -->
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-route.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-resource.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <!-- Link to library to use in Application -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-route.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-resource.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
@@ -17,16 +17,23 @@
 </head>
 
 <body>
-<section data-ng-controller="IndexController">
-    <!-- use double braces to refer to a property defined in IndexController -->
-    <h1>{{title}}</h1>
+<main>
+    <section data-ng-controller="IndexController">
+        <!-- use double braces to refer to a property defined in IndexController -->
+        <div class="row">
+            <div class="col-md-3">
+                <h1>{{title}}</h1>
+            </div>
 
-    <div class="paperSearch">
-        <div data-ng-controller="PaperSearch" data-ng-include="'js/partials/search.html'"></div>
-    </div>
-    <div class="Schedule">
-        <div data-ng-controller="Schedule" data-ng-include="'js/partials/schedule.html'"></div>
-    </div>
-</section>
+
+            <div class="paperSearch col-md-3 col-md-offset-4">
+                <div data-ng-controller="PaperSearch" data-ng-include="'js/partials/search.html'"></div>
+            </div>
+        </div>
+        <div class="Schedule">
+            <div data-ng-controller="Schedule" data-ng-include="'js/partials/schedule.html'"></div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
