--- a/part2/index.html
+++ b/part2/index.html
@@ -30,7 +30,10 @@
                 <div data-ng-controller="PaperSearch" data-ng-include="'js/partials/search.html'"></div>
             </div>
         </div>
-        <div class="Schedule">
+        <div class="Days">
+            <div data-ng-controller="daysController" data-ng-include="'js/partials/Days.html'"></div>
+        </div>
+        <div class="schedule">
             <div data-ng-controller="Schedule" data-ng-include="'js/partials/schedule.html'"></div>
         </div>
     </section>
