--- a/apitester.html
+++ b/apitester.html
@@ -12,7 +12,9 @@
 </main>
 <script type="text/javascript">
 
-    let myJSON = {"day":"Monday"};
+    let myJSON = {"data":
+                    {"day":"Monday"}
+                };
     console.log(myJSON);
     fetch('http://localhost/WAI-assigin/part1/api/schedule/', {
         method: 'POST',
