--- a/part2/index.html
+++ b/part2/index.html
@@ -34,7 +34,7 @@
             <div data-ng-controller="daysController" data-ng-include="'js/partials/Days.html'"></div>
         </div>
         <div class="schedule">
-            <div data-ng-controller="Schedule" data-ng-include="'js/partials/schedule.html'"></div>
+            <div data-ng-view></div>
         </div>
     </section>
 </main>
