--- a/part2/index.html
+++ b/part2/index.html
@@ -9,6 +9,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-resource.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
+    <link rel="sylesheet" href="css/main.css" type="text/css">
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
@@ -21,20 +22,28 @@
     <section data-ng-controller="IndexController">
         <!-- use double braces to refer to a property defined in IndexController -->
         <div class="row">
+
             <div class="col-md-3">
                 <h1>{{title}}</h1>
             </div>
 
-
-            <div class="paperSearch col-md-3 col-md-offset-4">
+            <div class="paperSearch col-md-2 col-md-offset-4">
                 <div data-ng-controller="PaperSearch" data-ng-include="'js/partials/search.html'"></div>
             </div>
+
         </div>
-        <div class="Days">
-            <div data-ng-controller="daysController" data-ng-include="'js/partials/Days.html'"></div>
-        </div>
-        <div class="schedule">
-            <div data-ng-view></div>
+        <div class="row">
+            <div class="col-md-3">
+
+                <div class="Days">
+                    <div data-ng-controller="daysController" data-ng-include="'js/partials/Days.html'"></div>
+                </div>
+            </div>
+            <div class="col-md-3"></div>
+
+            <div class="schedule">
+                <div data-ng-view></div>
+            </div>
         </div>
     </section>
 </main>
