--- a/part2/index.html
+++ b/part2/index.html
@@ -44,6 +44,9 @@
             <div class="schedule">
                 <div data-ng-view></div>
             </div>
+            <div class="slot">
+                <div data-ng-view></div>
+            </div>
         </div>
     </section>
 </main>
